--- a/materialdesigndemo/src/main/res/layout/activity_fruit.xml
+++ b/materialdesigndemo/src/main/res/layout/activity_fruit.xml
@@ -31,6 +31,7 @@
                 android:layout_height="match_parent"
                 app:layout_collapseMode="parallax"
                 android:scaleType="centerCrop"
+                android:transitionName="profile"
                 android:fitsSystemWindows="true"
                 android:src="@mipmap/frush"/>
 
