--- a/materialdesigndemo/src/main/res/layout/card_view_lay.xml
+++ b/materialdesigndemo/src/main/res/layout/card_view_lay.xml
@@ -14,6 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
+            android:transitionName="profile"
             android:src="@mipmap/sum" />
 
         <TextView
