--- a/elementtransition/src/main/res/layout/activity_main.xml
+++ b/elementtransition/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,6 +12,12 @@
     tools:context="clonetrain.wondersgroup.com.elementtransition.MainActivity">
 
 
+    <Button
+        android:id="@+id/button_content_transition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="内容转换"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
