--- a/materialdesigndemo/src/main/res/layout/activity_fruit.xml
+++ b/materialdesigndemo/src/main/res/layout/activity_fruit.xml
@@ -21,6 +21,7 @@
             android:layout_height="match_parent"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:contentScrim="@color/colorPrimary"
+            app:expandedTitleTextAppearance="@style/FontExpendStyle"
             android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             >
