--- a/materialdesigndemo/src/main/res/values/styles.xml
+++ b/materialdesigndemo/src/main/res/values/styles.xml
@@ -13,5 +13,11 @@
      <item name="colorAccent">@color/colorPrimaryDark</item>
      </style>
 
+    <style name="FontExpendStyle" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@android:color/transparent</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+
 
 </resources>
