--- a/bottomsheet/src/main/res/layout/activity_main.xml
+++ b/bottomsheet/src/main/res/layout/activity_main.xml
@@ -1,30 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context="clonetrain.wondersgroup.com.criclemenu.MainActivity">
+    app:behavior_hideable="true">
 
-    <TextView
-        android:id="@+id/text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" bootSheetDialog" />
-  <TextView
-        android:id="@+id/text_view_bottom_sheets"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" bootSheets" />
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nested_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/text_view_dialog_fragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" BottomSheetDialogFragment" />
-</LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button_bottom_dialog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" bootSheetDialog"
+                android:textAllCaps="false" />
+
+            <TextView
+                android:id="@+id/text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:text=" bootSheetDialog" />
+
+            <TextView
+                android:id="@+id/text_view_bottom_sheets"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:text=" bootSheets" />
+
+            <TextView
+                android:id="@+id/text_view_dialog_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:text=" BottomSheetDialogFragment" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:text=" BottomSheetDialogFragment" />
+
+        </LinearLayout>
+
+
+    </android.support.v4.widget.NestedScrollView>
+
+    <!--底部弹出框-->
+    <LinearLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="50dp"
+        app:layout_behavior="@string/bottom_sheet_behavior">
+        <!--通过设置LinearLayout的app:layout_behavior属性来设置此布局的行为,设置后Linear会在屏幕的底部：-->
+        <!--app:behavior_peekHeight="0dp" 不显示  -->
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="首页" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="课程" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="我的" />
+
+    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
