--- a/sinaaddmenu/src/main/res/layout/popup_menu.xml
+++ b/sinaaddmenu/src/main/res/layout/popup_menu.xml
@@ -7,125 +7,125 @@
 
 
 
-    <!--<ImageView-->
-        <!--android:id="@+id/top_image"-->
-        <!--android:layout_marginTop="30dip"-->
-        <!--android:layout_marginLeft="10dip"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
-    <!--<TextView-->
-        <!--android:layout_marginTop="20dip"-->
-        <!--android:layout_below="@+id/top_image"-->
-        <!--android:layout_marginLeft="30dip"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textColor="#333333"-->
-        <!--android:lineSpacingMultiplier="1.5"-->
-        <!--android:text="如果不是相互喜欢\n你的痴情就是别人的负担"/>-->
+    <ImageView
+        android:id="@+id/top_image"
+        android:layout_marginTop="30dip"
+        android:layout_marginLeft="10dip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_marginTop="20dip"
+        android:layout_below="@+id/top_image"
+        android:layout_marginLeft="30dip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#333333"
+        android:lineSpacingMultiplier="1.5"
+        android:text="如果不是相互喜欢\n你的痴情就是别人的负担"/>
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_marginLeft="25dip"-->
-        <!--android:layout_marginRight="25dip"-->
-        <!--android:gravity="bottom"-->
-        <!--android:orientation="horizontal">-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="25dip"
+        android:layout_marginRight="25dip"
+        android:gravity="bottom"
+        android:orientation="horizontal">
 
-        <!--<LinearLayout-->
-            <!--android:id="@+id/test1"-->
-            <!--android:layout_width="0dip"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginBottom="210dip"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="center"-->
-            <!--android:orientation="vertical">-->
+        <LinearLayout
+            android:id="@+id/test1"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="210dip"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
-            <!--<ImageView-->
-                <!--android:layout_width="50dip"-->
-                <!--android:layout_height="50dip"-->
-                <!--android:src="@mipmap/img1" />-->
+            <ImageView
+                android:layout_width="50dip"
+                android:layout_height="50dip"
+                android:src="@mipmap/img1" />
 
-            <!--<TextView-->
-                <!--android:layout_marginTop="10dip"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="说说"-->
-                <!--android:textColor="#333333"-->
-                <!--android:textSize="12sp"/>-->
-        <!--</LinearLayout>-->
+            <TextView
+                android:layout_marginTop="10dip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="说说"
+                android:textColor="#333333"
+                android:textSize="12sp"/>
+        </LinearLayout>
 
-        <!--<LinearLayout-->
-            <!--android:id="@+id/test2"-->
-            <!--android:layout_width="0dip"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginBottom="210dip"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="center"-->
-            <!--android:orientation="vertical">-->
-
-
-            <!--<ImageView-->
-                <!--android:layout_width="50dip"-->
-                <!--android:layout_height="50dip"-->
-                <!--android:src="@mipmap/img2" />-->
-
-            <!--<TextView-->
-                <!--android:layout_marginTop="10dip"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="照片"-->
-                <!--android:textColor="#333333"-->
-                <!--android:textSize="12sp" />-->
-        <!--</LinearLayout>-->
-
-        <!--<LinearLayout-->
-            <!--android:id="@+id/test3"-->
-            <!--android:layout_width="0dip"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginBottom="210dip"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="center"-->
-            <!--android:orientation="vertical">-->
+        <LinearLayout
+            android:id="@+id/test2"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="210dip"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
 
-            <!--<ImageView-->
-                <!--android:layout_width="50dip"-->
-                <!--android:layout_height="50dip"-->
-                <!--android:src="@mipmap/img1" />-->
+            <ImageView
+                android:layout_width="50dip"
+                android:layout_height="50dip"
+                android:src="@mipmap/img2" />
 
-            <!--<TextView-->
-                <!--android:layout_marginTop="10dip"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="视频"-->
-                <!--android:textColor="#333333"-->
-                <!--android:textSize="12sp" />-->
-        <!--</LinearLayout>-->
+            <TextView
+                android:layout_marginTop="10dip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="照片"
+                android:textColor="#333333"
+                android:textSize="12sp" />
+        </LinearLayout>
 
-        <!--<LinearLayout-->
-            <!--android:id="@+id/test4"-->
-            <!--android:layout_width="0dip"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginBottom="210dip"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="center"-->
-            <!--android:orientation="vertical">-->
+        <LinearLayout
+            android:id="@+id/test3"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="210dip"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
-            <!--<ImageView-->
-                <!--android:layout_width="50dip"-->
-                <!--android:layout_height="50dip"-->
-                <!--android:src="@mipmap/img2" />-->
 
-            <!--<TextView-->
-                <!--android:layout_marginTop="10dip"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="直播"-->
-                <!--android:textColor="#333333"-->
-                <!--android:textSize="12sp" />-->
-        <!--</LinearLayout>-->
+            <ImageView
+                android:layout_width="50dip"
+                android:layout_height="50dip"
+                android:src="@mipmap/img1" />
 
-    <!--</LinearLayout>-->
+            <TextView
+                android:layout_marginTop="10dip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="视频"
+                android:textColor="#333333"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/test4"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="210dip"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="50dip"
+                android:layout_height="50dip"
+                android:src="@mipmap/img2" />
+
+            <TextView
+                android:layout_marginTop="10dip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="直播"
+                android:textColor="#333333"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 
     <LinearLayout
